--- a/projetos/rust_derive1x1_v1.tex
+++ b/projetos/rust_derive1x1_v1.tex
@@ -1,10 +1,10 @@
-\begin{lstlisting}[caption=Calculo de Derivada em Rust.]
+\begin{lstlisting}[]
 
 pub fn derive1x1_v1<F>(f: &F, x: f64) -> f64
 where
     F: Fn(f64) -> f64,
 {
-    (f(x + DBL_EPS) - f(x)) / DBL_EPS
+    (f(x + h) - f(x)) / h
 }
 
 
