--- a/projetos/rust_derive1x1_v2.tex
+++ b/projetos/rust_derive1x1_v2.tex
@@ -1,11 +1,11 @@
-\begin{lstlisting}[caption=Calculo de Derivada em Rust.]
+\begin{lstlisting}[]
 
 pub fn derive1x1_v2<F>(f: &F, x: f64) -> f64
 where
     F: Fn(f64) -> f64,
 {
-    let x1 = x - DBL_EPS;
-    let x2 = x + DBL_EPS;
+    let x1 = x - h;
+    let x2 = x + h;
 
     let y1 = f(x1);
     let y2 = f(x2);
