Colocando referências das imagens

--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -64,10 +64,13 @@ global. Como pode-se perceber na Figura
 
 \begin{figure}[h]
     \includegraphics[width=0.43\textwidth]
-        {src/grafico_local_global_pontosCriticos.png}
+    {src/grafico_local_global_pontosCriticos.png}
     \centering
     \caption{Exemplo de pontos críticos locais e globais indicados no gráfico
-        de uma função.}
+    de uma função.\\
+    \centering
+    \tiny Essa imagem foi coletada de \url{https://www.onlinemathlearning.com}.}
+    }
     \label{grafico_local_global_pontosCriticos}
 \end{figure}
 
@@ -153,18 +156,20 @@ Consideraremos, por agora, apenas o problema de encontrar os pontos críticos.
 A taxa de variação de uma função, \(y=f(x)\), em relação a \(x\), é dada pela
 relação \(\Delta y / \Delta x\). Sendo o cálculo da derivada
 demonstrado pela Figura \ref{derivada_padrao}, o que nos leva ao fato de que
- os pontos críticos provém do conjunto solução da equação \(f'(x) = 0\), como
- definido na equação \ref{equacao_conjunto_o}. Além disso, caso a função esteja
- definida num intervalo fechado, temos pelo Teorema do Valor Absoluto, a
- garantia que ela atingirá o valor dos seus pontos extremos, ou seja, seus
- valores de máximo e mínimo serão atingidos naquele intervalo. O que culmina
- nossa busca pelos pontos críticos.
+os pontos críticos provém do conjunto solução da equação \(f'(x) = 0\), como
+definido na equação \ref{equacao_conjunto_o}. Além disso, caso a função esteja
+definida num intervalo fechado, temos pelo Teorema do Valor Absoluto, a
+garantia que ela atingirá o valor dos seus pontos extremos, ou seja, seus
+valores de máximo e mínimo serão atingidos naquele intervalo. O que culmina
+nossa busca pelos pontos críticos.
 
 \begin{figure}[h]
     \includegraphics[width=0.45\textwidth]
         {src/derivada_padrao.jpg}
     \centering
-    \caption{Derivada: taxa de variação \(dy/dx\).}
+    \caption{Derivada: taxa de variação \(dy/dx\).}\\
+    \centering
+    \tiny Essa imagem foi coletada de \url{https://brasilescola.uol.com.br}.}
     \label{derivada_padrao}
 \end{figure}
 
@@ -192,9 +197,9 @@ pontos críticos seguindo os critérios que são apontados na Figura \ref{relaca
     \includegraphics[width=0.65\textwidth]
         {src/relacao_primeira_segunda_derivada.jpg}
     \centering
-    \caption{Propriedades e relação da primeira e segunda derivada.}
-    % TODO:
-    % \tiny Essa imagem foi coletada de \href{https://www.alfaconnection.pro.br}}
+    \caption{Propriedades e relação da primeira e segunda derivada.\\
+    \centering
+    \tiny Essa imagem foi coletada de \url{https://www.alfaconnection.pro.br}.}
     \label{relacao_primeira_segunda_derivada}
 \end{figure}
 
