--- a/Relatorio.tex
+++ b/Relatorio.tex
@@ -32,6 +32,9 @@
     % Indicar idioma do texto
     \usepackage[brazil]{babel}
 
+    %Colocar URL
+    \usepackage{hyperref}
+
     \usepackage{amssymb,amscd,latexsym}
     \usepackage{amsmath}
     \usepackage{color}
