Organizando a chamada das referências das imagens

--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -63,13 +63,17 @@ global. Como pode-se perceber na Figura
 \ref{grafico_local_global_pontosCriticos}.
 
 \begin{figure}[h]
+    \centering
     \includegraphics[width=0.43\textwidth]
     {src/grafico_local_global_pontosCriticos.png}
-    \centering
-    \caption{Exemplo de pontos críticos locais e globais indicados no gráfico
-    de uma função.\\
-    \centering
-    \tiny Essa imagem foi coletada de \url{https://www.onlinemathlearning.com}.}
+    \caption{
+      \centering %centralizar os dois textos em baixo da imagem (descricao)
+      Exemplo de pontos críticos locais e globais indicados no gráfico de uma
+      função.\\
+      {
+        \tiny %texto pequeno
+        Essa imagem foi coletada de \url{https://www.onlinemathlearning.com}.
+      }
     }
     \label{grafico_local_global_pontosCriticos}
 \end{figure}
@@ -164,12 +168,15 @@ valores de máximo e mínimo serão atingidos naquele intervalo. O que culmina
 nossa busca pelos pontos críticos.
 
 \begin{figure}[h]
-    \includegraphics[width=0.45\textwidth]
-        {src/derivada_padrao.jpg}
+    \includegraphics[width=0.45\textwidth]{src/derivada_padrao.jpg}
     \centering
-    \caption{Derivada: taxa de variação \(dy/dx\).}\\
-    \centering
-    \tiny Essa imagem foi coletada de \url{https://brasilescola.uol.com.br}.}
+    \caption{
+      \centering
+      Derivada: taxa de variação \(dy/dx\).\\
+      {
+        \tiny Essa imagem foi coletada de \url{https://brasilescola.uol.com.br}.
+      }
+    }
     \label{derivada_padrao}
 \end{figure}
 
@@ -195,11 +202,16 @@ pontos críticos seguindo os critérios que são apontados na Figura \ref{relaca
 
 \begin{figure}[h]
     \includegraphics[width=0.65\textwidth]
-        {src/relacao_primeira_segunda_derivada.jpg}
+      {src/relacao_primeira_segunda_derivada.jpg}
     \centering
-    \caption{Propriedades e relação da primeira e segunda derivada.\\
-    \centering
-    \tiny Essa imagem foi coletada de \url{https://www.alfaconnection.pro.br}.}
+    \caption{
+      \centering
+      Propriedades e relação da primeira e segunda derivada.\\
+      {
+        \tiny Essa imagem foi coletada de
+          \url{https://www.alfaconnection.pro.br}.
+      }
+    }
     \label{relacao_primeira_segunda_derivada}
 \end{figure}
 
