--- a/Capitulo1(Relatorio).tex
+++ b/Capitulo1(Relatorio).tex
@@ -64,16 +64,11 @@ global. Como pode-se perceber na Figura
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.43\textwidth]
-    {src/grafico_local_global_pontosCriticos.png}
+    \includegraphics[width=0.43\textwidth]{src/grafico_local_global_pontosCriticos.png}
+    \captionsetup{justification=centering}
     \caption{
-      \centering %centralizar os dois textos em baixo da imagem (descricao)
-      Exemplo de pontos críticos locais e globais indicados no gráfico de uma
-      função.\\
-      {
-        \tiny %texto pequeno
-        Essa imagem foi coletada de \url{https://www.onlinemathlearning.com}.
-      }
+      Exemplo de pontos críticos locais e globais indicados no gráfico de uma função.\\
+      \tiny Essa imagem foi coletada de \url{https://www.onlinemathlearning.com}.
     }
     \label{grafico_local_global_pontosCriticos}
 \end{figure}
@@ -168,14 +163,12 @@ valores de máximo e mínimo serão atingidos naquele intervalo. O que culmina
 nossa busca pelos pontos críticos.
 
 \begin{figure}[h]
-    \includegraphics[width=0.45\textwidth]{src/derivada_padrao.jpg}
     \centering
+    \includegraphics[width=0.45\textwidth]{src/derivada_padrao.jpg}
+    \captionsetup{justification=centering}
     \caption{
-      \centering
-      Derivada: taxa de variação \(dy/dx\).\\
-      {
+        Derivada: taxa de variação \(dy/dx\).\\
         \tiny Essa imagem foi coletada de \url{https://brasilescola.uol.com.br}.
-      }
     }
     \label{derivada_padrao}
 \end{figure}
@@ -201,16 +194,12 @@ da primeira derivada e/ou da segunda derivada, que obtemos a classificação dos
 pontos críticos seguindo os critérios que são apontados na Figura \ref{relacao_primeira_segunda_derivada}.
 
 \begin{figure}[h]
-    \includegraphics[width=0.65\textwidth]
-      {src/relacao_primeira_segunda_derivada.jpg}
     \centering
+    \includegraphics[width=0.65\textwidth]{src/relacao_primeira_segunda_derivada.jpg}
+    \captionsetup{justification=centering}
     \caption{
-      \centering
-      Propriedades e relação da primeira e segunda derivada.\\
-      {
-        \tiny Essa imagem foi coletada de
-          \url{https://www.alfaconnection.pro.br}.
-      }
+        Propriedades e relação da primeira e segunda derivada.\\
+        \tiny Essa imagem foi coletada de \url{https://www.alfaconnection.pro.br}.
     }
     \label{relacao_primeira_segunda_derivada}
 \end{figure}
