--- a/projetos/rust_newton1x1.tex
+++ b/projetos/rust_newton1x1.tex
@@ -1,5 +1,4 @@
-\begin{lstlisting}[caption=Implementação do Método de Newton para uma variável
-  em Rust.]
+\begin{lstlisting}
 pub fn newton1x1<F>(funcao_derivada: &F, x: f64) -> (usize, f64)
 where
     F: Fn(f64) -> f64,
